@@ -4,6 +4,8 @@ git-annex (0.07) UNRELEASED; urgency=low
   * unused: New subcommand, finds unused data. (Split out from fsck.)
   * dropunused: New subcommand, provides for easy dropping of unused keys
     by number, as listed by the unused subcommand.
+  * fsck: Print warnings to stderr; --quiet can now be used to only see
+    problems.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 14 Nov 2010 12:34:49 -0400
 
